# holmesgpt-runbook-mcp

./: .releaserc.json  Dockerfile  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/: deployment.yaml  externalsecret.yaml  service.yaml
docs/: runbook-template.md
src/holmesgpt_runbook_mcp/: __init__.py  claude_client.py  confluence.py  git_provider.py  github.py  llm_client.py  server.py  templates.py
tests/: conftest.py  test_confluence.py  test_templates.py
