[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "holmesgpt-runbook-mcp"
version = "0.1.0"
description = "MCP server for HolmesGPT — runbook search, gap detection, drafting, and root cause analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Polarpoint", email = "platform@polarpoint.io" }]
keywords = ["mcp", "holmesgpt", "runbooks", "sre", "platform-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "atlassian-python-api>=3.41.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# LLM providers — install at least one
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.30.0"]

# Git providers — install at least one
github       = ["PyGithub>=2.1.0"]
gitlab       = ["python-gitlab>=4.0.0"]
azure-devops = ["azure-devops>=7.1.0", "msrest>=0.7.0"]

# Convenience bundles
anthropic-github       = ["anthropic>=0.40.0", "PyGithub>=2.1.0"]
openai-github          = ["openai>=1.30.0", "PyGithub>=2.1.0"]
anthropic-gitlab       = ["anthropic>=0.40.0", "python-gitlab>=4.0.0"]
openai-gitlab          = ["openai>=1.30.0", "python-gitlab>=4.0.0"]
anthropic-azure-devops = ["anthropic>=0.40.0", "azure-devops>=7.1.0", "msrest>=0.7.0"]
openai-azure-devops    = ["openai>=1.30.0", "azure-devops>=7.1.0", "msrest>=0.7.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "PyGithub>=2.1.0",
    "python-gitlab>=4.0.0",
    "azure-devops>=7.1.0",
    "msrest>=0.7.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.5",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "pre-commit>=3.7.0",
    # Include all providers for local dev
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "PyGithub>=2.1.0",
    "python-gitlab>=4.0.0",
    "azure-devops>=7.1.0",
    "msrest>=0.7.0",
]

[project.scripts]
holmesgpt-runbook-mcp = "holmesgpt_runbook_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 30

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]
